<resources>
    <string name="app_name">Final_Mock</string>
    <string name="category_app">APP</string>
    <string name="category_music">MUSIC</string>
    <string name="category_photo">PHOTO</string>
    <string name="category_video">VIDEO</string>
    <string name="menu_search">search</string>
    <string name="menu_bluetooth">bluetooth</string>
    <string name="todo">TODO</string>
    <string name="bluetooth_off">bluetooth_off</string>
    <string name="bluetooth_on">bluetooth_on</string>

</resources>
